third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/leading-us.stderr
TOML parse error at line 1, column 14
  |
1 | leading-us = _123
  |              ^
invalid integer
expected leading digit
